# GenAI-Learning

./: .env  pyproject.toml  requirements.txt
