[project]
name = "langchain-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.4",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.23",
    "langchain-google-genai>=1.0.1",
    "langchain-groq>=0.0.1",
    "langchain-openai>=0.0.6",
    "python-dotenv>=1.2.2",
]
